<resources>
    <string name="app_name">Gestor de Custo</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="gestor_de_custo">Gestor de Custo</string>
    <string name="e_mail">E-mail</string>
    <string name="facebook">Facebook</string>
    <string name="cadatro_gestor_de_custo">Cadatro Gestor de Custo</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="profissao">Profissão</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="cep">CEP</string>
    <string name="pular">Pular</string>
    <string name="crie_um_perfil_completo">Crie um perfil completo</string>
    <string name="inserir">Inserir</string>
    <string name="title_activity_main">Gestor de Custo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gestor de Custo</string>
    <string name="nav_header_subtitle">Gerencie seu custo aqui.</string>
    <string name="nav_header_desc">Gestor de Custo</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Meu Cadastro</string>
    <string name="menu_gallery">Minhas Empresas</string>
    <string name="menu_slideshow">Minhas Atividades</string>
    <string name="simulacao">Simulação</string>
    <string name="tipo_de_atividade">Tipo de atividade</string>
    <string name="produto">Produto</string>
    <string name="servico">Serviço</string>
    <string name="tipo_de_simulacao">Tipo de simulação</string>
    <string name="sem_imposto">Sem impostos</string>
    <string name="com_impostos">Com impostos</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="custos_mat_ria_prima">Custos matéria prima</string>
    <string name="custos_mao_de_obra">Custos mão de obra</string>
    <string name="custos_diversos">Custos diversos</string>
    <string name="lucro_almejado">Lucro almejado</string>
    <string name="salvar">Salvar</string>
    <string name="valor_sugerido">Valor sugerido</string>
    <string name="revenda">Revenda</string>
</resources>