<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastroActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirmarSenhaInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaInput"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="71dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/cadatro_gestor_de_custo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nomeInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/nome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/e_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpfInput"
        app:layout_constraintVertical_bias="0.0" />

    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/cpfInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="1dp"
        android:hint="@string/cpf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeInput"
        app:layout_constraintVertical_bias="0.0"
        app:mask="___.___.___-__"
        app:maskCharacter="_"
        app:maskStyle="persistent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/senhaInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cadastrarBtn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmarSenhaInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancelarBtn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/confirmarSenhaInput"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nomeInput"
        tools:layout_editor_absoluteX="192dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>