<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activity.SimulacaoActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="368dp"
            android:layout_height="94dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginRight="13dp"
                android:layout_marginLeft="13dp"
                android:gravity="center"
                android:text="@string/tipo_de_atividade"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/tipoAtividade"
                android:layout_width="358dp"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/tipoAtividadeProduto"
                    android:layout_width="368dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/produto"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/tipoAtividadeServico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/servico"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="365dp"
            android:layout_height="86dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="341dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginRight="13dp"
                android:layout_marginLeft="13dp"
                android:gravity="center"
                android:text="@string/tipo_de_simulacao"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/tipoSimulacao"
                android:layout_width="358dp"
                android:layout_height="25dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/tipoSimulacaoSemImposto"
                    android:layout_width="368dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sem_imposto"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/tipoSimulacaoComImposto"
                    android:layout_width="368dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/com_impostos"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RadioGroup>
        </LinearLayout>

        <CheckBox
            android:id="@+id/revenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/revenda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

        </CheckBox>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nomeProdutoInput"
            android:layout_width="357dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginBottom="456dp"
            android:hint="@string/nome_do_produto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.611"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/revenda"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/custoMateriaInput"
            android:layout_width="357dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:hint="@string/custos_mat_ria_prima"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeProdutoInput"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/custoMaoObraInput"
            android:layout_width="357dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:hint="@string/custos_mao_de_obra"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custoMateriaInput"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/custoDiversoInput"
            android:layout_width="357dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:hint="@string/custos_diversos"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custoMaoObraInput"
            app:layout_constraintVertical_bias="0.0" />

        <com.santalu.maskara.widget.MaskEditText
            android:id="@+id/lucroInput"
            android:layout_width="357dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:hint="@string/lucro_almejado"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custoDiversoInput"
            app:layout_constraintVertical_bias="0.0"
            app:mask="___%"
            app:maskCharacter="_"
            app:maskStyle="persistent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valorSujeridoInput"
            android:layout_width="357dp"
            android:layout_height="47dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:hint="@string/valor_sugerido"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lucroInput"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/salvarBtn"
            android:layout_width="163dp"
            android:layout_height="53dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:text="@string/salvar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valorSujeridoInput"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/cancelarBtn"
            android:layout_width="163dp"
            android:layout_height="53dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="13dp"
            android:layout_marginLeft="13dp"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/valorSujeridoInput"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Começa o menu aqui -->
    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>
    <!-- Termina o menu aqui -->
</androidx.drawerlayout.widget.DrawerLayout>